[package]
name = "tangle"
build = "build.rs"
description = "Tangle Standalone chain node"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[[bin]]
name = "tangle"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
parity-scale-codec = { workspace = true }
futures = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true }
rand = { workspace = true }

# Substrate dependencies
sc-cli = { workspace = true }
sc-executor = { workspace = true }
sc-offchain = { workspace = true }
sc-keystore = { workspace = true }
sc-service = { workspace = true }
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
frame-system = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-network = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-keyring = { workspace = true }
sp-trie = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-network-sync = { workspace = true }
webb-consensus-types = { workspace = true }
webb-proposals = { workspace = true }

sp-consensus-grandpa = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }
sp-inherents = { workspace = true, features = ["default"] }
sp-offchain = { workspace = true, features = ["default"] }
sp-runtime = { workspace = true, features = ["default"] }
sp-session = { workspace = true, features = ["default"] }
sp-state-machine = { workspace = true, features = ["default"] }
sp-timestamp = { workspace = true, features = ["default"] }
sp-transaction-pool = { workspace = true, features = ["default"] }

sc-chain-spec = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
pallet-airdrop-claims = { workspace = true }

# RPC related dependencies
jsonrpsee = { workspace = true }
pallet-im-online = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-transaction-pool-api = { workspace = true }
wasmer = { version = "2.3" }

# Frontier
fc-cli = { workspace = true }
fc-consensus = { workspace = true }
fc-db = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc = { workspace = true, features = ["rpc-binary-search-estimate"] }
fc-rpc-core = { workspace = true }
fc-storage = { workspace = true }
fp-account = { workspace = true }
fc-api = { workspace = true }
fp-dynamic-fee = { workspace = true, features = ["default"] }
fp-evm = { workspace = true, features = ["default"] }
fp-rpc = { workspace = true, features = ["default"] }

rpc-trace = { workspace = true }
rpc-debug = { workspace = true }
rpc-txpool = { workspace = true }
rpc-primitives-debug = { workspace = true }
rpc-primitives-txpool = { workspace = true }
primitives-ext = { workspace = true }
sp-transaction-storage-proof = { workspace = true }
sc-statement-store = { workspace = true }
sp-statement-store = { workspace = true }
sc-consensus-slots = { workspace = true }
sp-consensus = { workspace = true }
sp-keystore = { workspace = true }
sc-consensus-babe-rpc = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
mmr-rpc = { workspace = true }
sc-rpc-spec-v2 = { workspace = true }
substrate-state-trie-migration-rpc = { workspace = true }
sc-sync-state-rpc = { workspace = true }
sc-sysinfo = { workspace = true }
sc-authority-discovery = { workspace = true }
sc-storage-monitor = { workspace = true }
sc-network-statement = { workspace = true }
sc-network-common = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
tangle-testnet-runtime = { workspace = true, optional = true }
tangle-runtime = { workspace = true, features = ["std"] }
tangle-primitives = { workspace = true, features = ["std"] }
tangle-crypto-primitives = { workspace = true }

[features]
default = ["with-rocksdb-weights", "rocksdb", "sql"]
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"tangle-runtime/runtime-benchmarks",
    "tangle-testnet-runtime?/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
]
with-rocksdb-weights = ["tangle-testnet-runtime/with-rocksdb-weights"]
with-paritydb-weights = ["tangle-testnet-runtime/with-paritydb-weights"]
rocksdb = [
 "sc-cli/rocksdb",
 "sc-service/rocksdb",
 "fc-cli/rocksdb",
 "fc-db/rocksdb",
 "fc-mapping-sync/rocksdb",
 "fc-rpc/rocksdb",
]
sql = ["fc-db/sql", "fc-mapping-sync/sql"]
testnet = ["tangle-testnet-runtime"]
txpool = ["fc-rpc/txpool"]
